--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
     </main>
     <footer> 
         <div>
-            <a href="https://x.com/?lang=es"><img class="fa-brands fa-x" src="./../assets/images/gorjeo.png" alt="logotipo de X" width="512" height="512"></a>
-            <a href="https://www.facebook.com/?locale=es_ES"><img class="fa-brands fa-facebook" src="./../assets/images/facebook.png" alt="logotipo de facebook" width="512" height="512"></a>
-            <a href="https://www.instagram.com"><img class="fa-brands fa-instagram" src="./../assets/images/logotipo-de-instagram.png" alt="logotipo de instagram" width="512" height="512"></a>
+            <a href="https://x.com/?lang=es"><img class="fa-brands fa-x" src="./assets/images/gorjeo.png" alt="logotipo de X" width="512" height="512"></a>
+            <a href="https://www.facebook.com/?locale=es_ES"><img class="fa-brands fa-facebook" src="./assets/images/facebook.png" alt="logotipo de facebook" width="512" height="512"></a>
+            <a href="https://www.instagram.com"><img class="fa-brands fa-instagram" src="./assets/images/logotipo-de-instagram.png" alt="logotipo de instagram" width="512" height="512"></a>
         </div>
         <p>Carrer de Jorge Juan, 19, L'Eixample, 46004 València, Valencia. </p>
         <p>&copy;2024 Cannoli Factory</p>
