--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         </section>
        
         <section class="indexstyle">
+            <h2 hidden>.</h2>
             <article class="scroll">
                 <h3 class="fonth4">Cannoli Factory</h3>
                 <p>
@@ -72,6 +73,7 @@
         </section> 
 
         <section class="indexstyle">
+            <h2 hidden>.</h2>
             <article class="scroll">
                 <h3 class="fonth4">Horario</h3>
                 <p>
@@ -98,8 +100,8 @@
     </main>
     <footer> 
         <div>
-            <a href="https://x.com/?lang=es"><img class="fa-brands fa-x" src="./assets/images/gorjeo.png" alt="logotipo de X" width="512" height="512"></a>
-            <a href="https://www.facebook.com/?locale=es_ES"><img class="fa-brands fa-facebook" src="./assets/images/facebook.png" alt="logotipo de facebook" width="512" height="512"></a>
+            <a href="https://x.com/?lang=es"><img class="fa-brands fa-x" src="./../assets/images/gorjeo.png" alt="logotipo de X" width="512" height="512"></a>
+            <a href="https://www.facebook.com/?locale=es_ES"><img class="fa-brands fa-facebook" src="./../assets/images/facebook.png" alt="logotipo de facebook" width="512" height="512"></a>
             <a href="https://www.instagram.com"><img class="fa-brands fa-instagram" src="./assets/images/logotipo-de-instagram.png" alt="logotipo de instagram" width="512" height="512"></a>
         </div>
         <p>Carrer de Jorge Juan, 19, L'Eixample, 46004 València, Valencia. </p>
